# python_bundler

./: .pylintrc  Makefile  README.md  pyproject.toml
python_bundler/: __main__.py  compile.py  main_template.py
