[project]
name = "python-bundler"
version = "0.1.0"
description = ""
authors = [
    {name = "Zach Taira",email = "zach.taira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9, <4.0.0"
dependencies = [
    "poetry (>=2.0.1,<3.0.0)"
]

[tool.poetry.scripts]
python_bundler = "python_bundler.__main__:main"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.3"
isort = "^5.13.2"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
